--- a/XDMA_DDR.srcs/sources_1/bd/XDMA_PS_DDR/ui/bd_32bb3f35.ui
+++ b/XDMA_DDR.srcs/sources_1/bd/XDMA_PS_DDR/ui/bd_32bb3f35.ui
@@ -8,28 +8,29 @@
 preplace port DDR -pg 1 -lvl 6 -x 1770 -y 60 -defaultsOSRD
 preplace port FIXED_IO -pg 1 -lvl 6 -x 1770 -y 80 -defaultsOSRD
 preplace port pcie_7x_mgt_rtl_0 -pg 1 -lvl 6 -x 1770 -y -170 -defaultsOSRD
-preplace port sys_diff_clock -pg 1 -lvl 0 -x -270 -y -130 -defaultsOSRD
-preplace port port-id_sys_rst -pg 1 -lvl 0 -x -270 -y -100 -defaultsOSRD
+preplace port sys_diff_clock -pg 1 -lvl 0 -x -340 -y -230 -defaultsOSRD
+preplace port port-id_sys_rst -pg 1 -lvl 0 -x -340 -y -100 -defaultsOSRD
 preplace inst axi_interconnect_0 -pg 1 -lvl 4 -x 1130 -y 130 -defaultsOSRD
 preplace inst processing_system7_0 -pg 1 -lvl 5 -x 1510 -y 140 -defaultsOSRD
 preplace inst rst_ps7_0_50M -pg 1 -lvl 3 -x 780 -y 190 -defaultsOSRD
 preplace inst xdma_0 -pg 1 -lvl 2 -x 440 -y -120 -defaultsOSRD
-preplace inst util_ds_buf_0 -pg 1 -lvl 1 -x -120 -y -130 -defaultsOSRD
+preplace inst util_ds_buf_0 -pg 1 -lvl 1 -x -110 -y -130 -defaultsOSRD
+preplace inst processing_system7_1 -pg 1 -lvl 1 -x -110 -y 180 -defaultsOSRD
 preplace netloc processing_system7_0_FCLK_CLK0 1 2 4 610 90 970 250 1280 280 1750
 preplace netloc processing_system7_0_FCLK_RESET0_N 1 2 4 610 290 NJ 290 NJ 290 1740
 preplace netloc rst_ps7_0_50M_peripheral_aresetn 1 3 1 980 110n
+preplace netloc sys_rst_1 1 0 2 -310J -190 90
+preplace netloc util_ds_buf_0_IBUF_OUT 1 1 1 N -130
 preplace netloc xdma_0_axi_aclk 1 2 2 N -130 960
 preplace netloc xdma_0_axi_aresetn 1 2 2 N -110 950
-preplace netloc util_ds_buf_0_IBUF_OUT 1 1 1 N -130
-preplace netloc sys_rst_1 1 0 2 -250J -190 10
+preplace netloc axi_interconnect_0_M00_AXI 1 4 1 N 130
 preplace netloc processing_system7_0_DDR 1 5 1 NJ 60
 preplace netloc processing_system7_0_FIXED_IO 1 5 1 NJ 80
-preplace netloc axi_interconnect_0_M00_AXI 1 4 1 N 130
+preplace netloc sys_diff_clock_1 1 0 1 -320 -230n
 preplace netloc xdma_0_M_AXI 1 2 2 N -190 970
 preplace netloc xdma_0_pcie_mgt 1 2 4 N -170 NJ -170 NJ -170 NJ
-preplace netloc sys_diff_clock_1 1 0 1 N -130
-levelinfo -pg 1 -270 -120 440 780 1130 1510 1770
-pagesize -pg 1 -db -bbox -sgen -410 -440 1940 550
+levelinfo -pg 1 -340 -110 440 780 1130 1510 1770
+pagesize -pg 1 -db -bbox -sgen -480 -440 1950 550
 "
 }
 {
